--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
   </head>
   <body>
 
+    <article>
+      <header>
+        <h1>Super Epic Tile Layer</h1>
+        <strong>$35</strong>
+        <em>(In stock)</em>
+      </header>
+
+      <img src="images/placeholder-4by3.svg" alt="">
+    </article>
+
   </body>
 </html>
