Add descriptive list to index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
       </header>
 
       <img src="images/placeholder-4by3.svg" alt="">
+
+      <dl>
+        <dt>Age:</dt>
+        <dd>8+</dd>
+        <dt>Number players:</dt>
+        <dd>2-5</dd>
+        <dt>Length:</dt>
+        <dd>45 min</dd>
+        <dt>Average Rating:</dt>
+        <meter value="4" min="0" max="5"></meter>
+      </dl>
     </article>
 
   </body>
